--- a/latheMesa/graphViz/Estop.dox
+++ b/latheMesa/graphViz/Estop.dox
@@ -1,42 +1,13 @@
 /*!
     \file Estop.dox
 
-    \addtogroup HAL
-
-    The configuration .ini specifies a HAL section.
-
-    \code
-        [HAL]
-        TWOPASS = on
-        HALUI = halui
-        HALFILE = latheMesa.hal
-        HALFILE = LatheSpindle.hal
-        HALFILE = custom.hal
-        POSTGUI_HALFILE = postgui_call_list.hal
-        SHUTDOWN = shutdown.hal
-    \endcode
-
-    HALFILE
-        - latheMesa.hal Traditional configuration file with basic stepper control.
-        - LatheSpindle.hal Configures the spindle components including encoder and pid/pwmgen for the VFD.
-        - custom.hal (Empty)
-
-    POSTGUI_HALFILE These files are loaded post GUI, in the order they appear
-        - postgui_call_list.hal - Contains the following list of files to load after the GUI.
-            - spindle_postgui.hal - Filters spindle speed for pyvcp display.
-            - joypad_jog_speed.hal - Logitech joypad jogging speed functionality.
-            - joypad_xz.hal - Connects joypad to joystick controls for lathe.
-            - joypad_extras.hal - Connnects jogging to the digital joypad, program run, pause, resume and manual/auto modoe of operation. 
-
-    SHUTDOWN
-        - shutdown.hal (empty)
-
     \addtogroup EStopLatch
 
     This diagram illustrates the .hal components for the estop latch logic of my lathe.
 
     \dot
         digraph structs {
+            rankdir="LR"
             concentrate=true
             label="EStopLatch control."
 
@@ -71,8 +42,7 @@
                         </TR>
                     
                     </TABLE>
-                >
-                ]
+                >]
             }
 
             subgraph cluster_estop1{
@@ -106,8 +76,74 @@
                         </TR>
                     
                     </TABLE>
-                >
-                ]
+                >]
+            }
+
+            subgraph cluster_estop2{
+                label="estop-latch.2"
+                estop2 [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="i0">fault-in</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="i1">ok-in</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="o0">fault-out</TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o1">ok-out</TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o2">watchdog</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
+                        
+                        <TR>
+                            <TD COLSPAN="2">
+                            <TABLE CELLBORDER="0" BORDER="0">
+                                <TR >
+                                    <TD port="f0">reset</TD>
+                                </TR>
+                            </TABLE>
+                            </TD>
+                        </TR>
+                    
+                    </TABLE>
+                >]
+            }
+            subgraph cluster_estop3{
+                label="estop-latch.3"
+                estop3 [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="i0">fault-in</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="i1">ok-in</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="o0">fault-out</TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o1">ok-out</TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o2">watchdog</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
+                        
+                        <TR>
+                            <TD COLSPAN="2">
+                            <TABLE CELLBORDER="0" BORDER="0">
+                                <TR >
+                                    <TD port="f0">reset</TD>
+                                </TR>
+                            </TABLE>
+                            </TD>
+                        </TR>
+                    
+                    </TABLE>
+                >]
             }
 
             subgraph cluster_iocontrol{
@@ -129,23 +165,38 @@
                 >]
             }
 
+            iocontrol -> estop0 -> estop1 -> estop2 -> estop3  [style=invis]
+
             n0 [shape="none" label=""];
             n1 [shape="none" label=""];
+            n2 [shape="none" label=""];
+            n3 [shape="none" label=""];
 
-            n0 -> estop0:i0:w [label="G540-fault"];
-            n1 -> estop1:i0:w [label="GS2-fault "];
+            n0 -> estop0:i0:w [label="estop-G540"      fontcolor="red" color="red"];
+            n1 -> estop1:i0:w [label="x-encoder-estop" fontcolor="red" color="red"];
+            n2 -> estop2:i0:w [label="z-encoder-estop" fontcolor="red" color="red"];
+            n3 -> estop3:i0:w [label="s-encoder-estop" fontcolor="red" color="red"];
 
-            iocontrol:o0:e  -> estop0:i1:e [label="latch0-ok-in" fontsize = "12" fontcolor="blue" color="blue"];
-            iocontrol:o1:se -> estop0:f0:s [color="blue"];
-            iocontrol:o1:se -> estop1:f0:s [label="latch-reset"  fontsize = "12" fontcolor="blue" color="blue"];
-            estop0:o1 -> estop1:i1;
-            estop1:o1 -> iocontrol:i0   [label="estop-out"  fontsize = "12" fontcolor="blue" color="blue"];
+            estop0:o1 -> estop1:i1 [label="latch0-out" fontsize = "10" ];
+            estop1:o1 -> estop2:i1 [label="latch1-out" fontsize = "10" ];
+            estop2:o1 -> estop3:i1 [label="latch2-out" fontsize = "10" ];
+            estop3:o1:w -> iocontrol:i0 [label="estop-out"];
 
-            {rank=source; n0 n1}
-            {rank=same; iocontrol estop0 estop1}
+            iocontrol:o0:e  -> estop0:i1 [label="latch0-ok-in" fontsize = "10" fontcolor="black" color="black"];
+            iocontrol:o1:se -> estop0:f0:s [label="latch-reset" fontsize = "10" fontcolor="blue" color="blue"];
+            iocontrol:o1:se -> estop1:f0:s [label="" fontsize = "10" fontcolor="blue" color="blue"];
+            iocontrol:o1:se -> estop2:f0:s [label="" fontsize = "10" fontcolor="blue" color="blue"];
+            iocontrol:o1:se -> estop3:f0:s [label="" fontsize = "10" fontcolor="blue" color="blue"];
         }
-    \enddot
-
-    
+    \enddot    
 */
+/*
+            iocontrol:o1:se -> estop1:f0:s [color="blue"];
 
+
+
+            estop2:o1 -> estop3:i2 [label="latch0-ok-in" fontsize = "12" fontcolor="blue" color="blue"];
+
+            iocontrol:o1:se -> estop2:f0:s [color="blue"];
+            iocontrol:o1:se -> estop3:f0:s [color="blue"];
+*/
