--- a/latheMesa/graphViz/SpindleControl.dox
+++ b/latheMesa/graphViz/SpindleControl.dox
@@ -103,7 +103,8 @@
                     <TABLE CELLBORDER="0" BORDER="0">
                        <TR><TD ALIGN="LEFT" port="o0">position</TD></TR>
                         <TR><TD ALIGN="LEFT" port="o1">velocity</TD></TR>                  
-                        <TR><TD ALIGN="LEFT" port="o2">index-enable</TD></TR>                  
+                        <TR><TD ALIGN="LEFT" port="o2">velocity-rpm</TD></TR>                  
+                        <TR><TD ALIGN="LEFT" port="o3">index-enable</TD></TR>                  
                     </TABLE>
                 >
                 ]
@@ -188,6 +189,7 @@
                 </TABLE>
                 >]
             }
+
             subgraph cluster_near{
                 label="near-spindle"
                 near [shape="box" label=<
@@ -209,6 +211,44 @@
                 >]
             }
 
+            subgraph cluster_abs{
+                label="abs"
+                abs [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="in">in</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="out">out</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
+                    </TABLE>
+                >]
+            }
+            subgraph cluster_filter{
+                label="filter"
+                filter [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="in">in</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="out">out</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
+                    </TABLE>
+                >]
+            }
             n00 [shape="point" style="invis"];
             n01 [shape="point" style="invis"];
             n02 [shape="point" style="invis"];
@@ -225,14 +265,14 @@
             mux2_0:out:e -> pwmgen:i1    [color="black"];
             pwmgen:o0 -> gpio:out2       [label="spindle-pwm"          fontsize = "12" fontcolor="black" color="black"];
 
-            encoder:o0 -> spindle_0:i0   [label="encoder-position"     fontsize = "12" fontcolor="blue" color="black"];
-            encoder:o1 -> spindle_0:i1   [label="encoder-velocity"     fontsize = "12" fontcolor="blue" color="black"];
-            encoder:o1 -> pid_s:f0       [color="black"];
-            encoder:o2 -> pid_s:i2       [label="spindle-index-enable" fontsize = "12" fontcolor="black" color="black"];
+            encoder:o0 -> spindle_0:i0   [label="encoder-position"     fontsize = "12" fontcolor="black" color="black"];
+            encoder:o1 -> spindle_0:i1   [label="encoder-velocity"     fontsize = "12" fontcolor="black" color="black"];
+            abs:out:e  -> pid_s:f0       [color="black"];
+            encoder:o3 -> pid_s:i2       [label="spindle-index-enable" fontsize = "12" fontcolor="black" color="black"];
 
             spindle_0:o1  -> mux2_0:in0  [label="spindle-enable-cnc"   fontsize = "12" fontcolor="blue" color="blue"];
             mux2_0:sel:n  -> gpio:in4    [label="spindle-enable-override" fontcolor="green" color="green" fontsize = "12" dir=back];
-            mux2_0:sel:w  -> mux2_0:in1:w [color="black"]; 
+            mux2_0:sel:w  -> mux2_0:in1:w [color="green"]; 
             mux2_0:out:e  -> gpio:out0   [label="spindle-enable"       fontsize = "12" fontcolor="black" color="black"];
 
             spindle_0:o2  -> mux2_1:in0  [label="spindle-cw-cnc"       fontsize = "12" fontcolor="blue" color="blue"];
@@ -242,17 +282,22 @@
             mux2_2:out:e  -> pid_s:i0    [label="spindle-velocity-cmd" fontsize = "12" fontcolor="black" color="black"];
             fixed_rpm     -> mux2_2:in1  [fontcolor="green" color="green"];
 
-            mux2_2:out:e   -> near:in2;
-            encoder:o1   -> near:in1:w;
-            near:out     -> spindle_0:i2 [label="spindle-at-speed"           fontsize = "12"];
+            encoder:o2  -> filter:in     [label="encoder-velocity-rpm" fontsize = "12" ];
+            filter:out  -> abs:in        [label="encoder-rpm-filtered" fontsize = "12" ];
+            abs:out     -> near:in1      [label="spindle-fb-filtered"  fontsize = "12" fontcolor="cyan"];
+            mux2_2:out  -> near:in2;
+            near:out    -> spindle_0:i2  [label="spindle-at-speed"  fontsize = "12" fontcolor="cyan"];
 
             {rank=same mux2_0 mux2_1 mux2_2};
-
         }
     \enddot
 */
 
 /*
+
+
+
+
             subgraph cluster_gmoccapy {
                 label="gmoccapy"
                 gmoccapy [shape="box" label=<
