--- a/latheMesa/graphViz/StepperControl.dox
+++ b/latheMesa/graphViz/StepperControl.dox
@@ -5,6 +5,7 @@
     
     Diagram showing default pncconf configuration.
     Notice the default configuration requires an edit of the .hal file to select whether the x-pos-fb signal is from the encoder.position or stepgen.position-fb.
+    This does not show the enable and index-enable pins and signals.
 
     This choice will simultaneously change:
         - pid control - stepgen position or encoder measurement for pid loop.
@@ -268,38 +269,40 @@
 */
 /**<br>
     *@addtogroup Stepper_control
-    \section d2 StepperControlProposed
+    \section d2 StepperControlStepgenFB 
 
-   Proposed diagram showing x-pos-fb choices. (encoder in red, stepgen in blue, x-vel-cmd in green )
-   - Use the trajectory planner x-vel-cmd as an input to the pid FF1 calculation. This eliminates a velocity estimation within the pid.
+   Diagram showing x-pos-fb <= stepgen position-fb choice.
    - Always use the encoder position as the joint position feedback instead of the stepgen position. (requires new signal x-pos-encoder when stepgen position is used for pid feedback)
-   - When using the encoder position as pid feedback, also use encoder velocity as an input to the pid feedback derivative.
+
+   This diagram does not show the enable pins and signals. It does show the index-enable signal and pins because previously Pncconf did NOT connect -index-enable to the stepgen. 
+   Not having stepgen index-enable connected causes problems with HOME_USE_INDEX and using encoder position into joint motor-pos-fb when x-pos-fb <= stepgen position-fb.
 
    \code
-        #
-        # The Trajectory Planner gives us the velocity. Using this signal with the PID avoids estimating the velocity command.
-        #
-        net x-vel-cmd        <= joint.0.vel-cmd                =>  pid.x.feedback-deriv
-        #
-        # Enable/Disable BOTH the following TWO lines to use the encoder to close the control loop.
-        # Use both the encoder position and velocity.
-        #
-        net x-pos-fb         <= hm2_7i96.0.encoder.00.position  => pid.x.feedback => joint.0.motor-pos-fb
-        net x-vel-fb         <= hm2_7i96.0.encoder.00.velocity  => pid.x.feedback-deriv
-        #
-        # Enable/Disable BOTH the following TWO line to use stepgen position to close the control loop.
-        # Add a new signal from encoder position so it can be used independent of pid fb signal. This allows encoder to be used as DRO without closing the control loop.
-        # Do not use the encoder x-vel-fb is you are using the stepgen position for x-pos-fb.
-        #
-        net x-pos-encoder    <= hm2_7i96.0.encoder.00.position     => joint.0.motor-pos-fb
-        net x-pos-fb         <= hm2_7i96.0.stepgen.00.position-fb  => pid.x.feedback 
+    #
+    # If you want to use x-pos-fb from the stepgenposition-fb with HOME_USE_INDEX or the encoder position as joint fb,  then you will need to use a bit file that supports stepgen.00.index-enable.
+    # This is required when using stepgen posititon for feedback and doesn't hurt when you use the encoder for feedback.
+    #
+    net x-index-enable  <=> joint.0.index-enable  <=>  hm2_7i96.0.encoder.00.index-enable <=>  pid.x.index-enable <=> hm2_7i96.0.stepgen.00.index-enable
+    #
+    # Enable/Disable BOTH the following TWO lines to use the encoder to close the control loop.
+    # Use both the encoder position and velocity.
+    # This should be the optimal configuration.
+    net x-pos-fb         <= hm2_7i96.0.encoder.00.position  => pid.x.feedback        => joint.0.motor-pos-fb
+    net x-vel-fb         <= hm2_7i96.0.encoder.00.velocity  => pid.x.feedback-deriv
+    #
+    # Enable/Disable BOTH the following TWO lines to use stepgen position to close the control loop.
+    # Add a new signal from encoder position so it can be used independent of pid fb signal. This allows encoder to be used as DRO without closing the control loop.
+    # Do not use the encoder x-vel-fb is you are using the stepgen position for x-pos-fb.
+    #
+    #net x-pos-fb         <= hm2_7i96.0.stepgen.00.position-fb  => pid.x.feedback    
+    #net x-pos-encoder    <= hm2_7i96.0.encoder.00.position  => joint.0.motor-pos-fb
     \endcode
 
       \dot
         digraph structs {
             concentrate=true
             rankdir="LR"
-            label="pncconf proposed stepgen control"
+            label="stepgen control using position-fb"
 
             subgraph cluster_encoder {
                 label="hm.0.encoder.00"
@@ -307,6 +310,7 @@
                     <TABLE CELLBORDER="0" BORDER="0">
                        <TR><TD ALIGN="LEFT" port="o0">position</TD></TR>
                         <TR><TD ALIGN="LEFT" port="o1">velocity</TD></TR>                  
+                        <TR><TD ALIGN="LEFT" port="o2">index-enable</TD></TR>
                     </TABLE>
                 >
                 ]
@@ -321,6 +325,7 @@
                             <TD>
                                 <TABLE CELLBORDER="0" BORDER="0" ALIGN="LEFT">
                                     <TR><TD port="i0">motor-pos-fb</TD></TR>
+                                    <TR><TD ALIGN="LEFT" port="i1">index-enable</TD></TR>
                                 </TABLE>
                             </TD>
                             <TD>
@@ -344,6 +349,7 @@
                                 <TABLE CELLBORDER="0" BORDER="0">
                                    <TR><TD ALIGN="LEFT" port="i0">command</TD></TR>
                                    <TR><TD ALIGN="LEFT" port="i1">command-deriv</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="i2">index-enable</TD></TR>
                                 </TABLE>
                             </TD>
                             <TD>
@@ -376,6 +382,7 @@
                         <TR><TD>
                             <TABLE CELLBORDER="0" BORDER="0">
                                    <TR><TD ALIGN="LEFT" port="i0">velocity-cmd</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="i1">index-enable</TD></TR>
                             </TABLE>
                         </TD>
                         <TD>
@@ -390,18 +397,160 @@
             null00 [shape="point" style="invis"];
             null01 [shape="point" color="black"];
 
+            encoder -> joint -> null00 -> pid -> stepgen [style="invis" weight=10.0];
+
             joint:o0    -> pid:i0       [label="x-pos-cmd" fontsize = "12" fontcolor="black" color="black"];
-            joint:o1    -> pid:i1       [label="x-vel-cmd" fontsize = "12" fontcolor="black" color="green"];
+            joint:o1    -> null00       [label="x-vel-cmd" fontsize = "12" fontcolor="black" color="black"];
             pid:o0      -> stepgen:i0   [label="x-output" fontsize = "12" fontcolor="black" color="black"];
 
-            stepgen:o0  -> null01       [label="x-pos-fb" fontsize = "12" fontcolor="blue" color="blue"];
-            null01      -> pid:f0:s     [label="x-pos-fb" fontsize = "12" fontcolor="black" color="black"];
+            stepgen:o0  -> pid:f0:s     [label="x-pos-fb" fontsize = "12" fontcolor="black" color="black"];
       
-            null01      -> joint:i0   [fontsize = "12" fontcolor="red" color="red"];
-            encoder:o0  -> joint:i0:w [label="x-pos-encoder" fontsize = "12" fontcolor="blue" color="blue"];
-            encoder:o0  -> null01     [label="x-pos-fb" fontsize = "12" fontcolor="red" color="red"];
+            encoder:o0  -> joint:i0:w   [label="x-pos-encoder" fontsize = "12" fontcolor="red" color="red"];
             
+            encoder:02 -> joint:i1 -> pid:i2 [label="x-index-enable" fontsize = "12" fontcolor="black" color="black" dir="both"];
+            pid:i2 -> stepgen:i1 [label="x-index-enable" fontsize = "12" fontcolor="red2" color="red2" dir="both"];
+        }
+    \enddot
+*/
+
+/**<br>
+    *@addtogroup Stepper_control
+    \section d3 StepperControlUsingEncoder
+
+   Diagram showing x-pos-fb <= encoder position choice.
+
+   - Always use the encoder position as the joint position feedback instead of the stepgen position. (requires new signal x-pos-encoder when stepgen position is used for pid feedback)
+   - When using the encoder position as pid feedback, also use encoder velocity as an input to the pid feedback derivative.
+
+   This diagram does not show the enable pins and signals. It does show the index-enable signal and pins because previously Pncconf did NOT connect -index-enable to the stepgen. 
+   Not having stepgen index-enable connected causes problems with HOME_USE_INDEX and using encoder position into joint motor-pos-fb when x-pos-fb <= stepgen position-fb.
+
+   \code
+    #
+    # If you want to use x-pos-fb from the stepgenposition-fb with HOME_USE_INDEX or the encoder position as joint fb,  then you will need to use a bit file that supports stepgen.00.index-enable.
+    # This is required when using stepgen posititon for feedback and doesn't hurt when you use the encoder for feedback.
+    #
+    net x-index-enable  <=> joint.0.index-enable  <=>  hm2_7i96.0.encoder.00.index-enable <=>  pid.x.index-enable <=> hm2_7i96.0.stepgen.00.index-enable
+    #
+    # Enable/Disable BOTH the following TWO lines to use the encoder to close the control loop.
+    # Use both the encoder position and velocity.
+    # This should be the optimal configuration.
+    #net x-pos-fb         <= hm2_7i96.0.encoder.00.position  => pid.x.feedback        => joint.0.motor-pos-fb
+    #net x-vel-fb         <= hm2_7i96.0.encoder.00.velocity  => pid.x.feedback-deriv
+    #
+    # Enable/Disable BOTH the following TWO lines to use stepgen position to close the control loop.
+    # Add a new signal from encoder position so it can be used independent of pid fb signal. This allows encoder to be used as DRO without closing the control loop.
+    # Do not use the encoder x-vel-fb is you are using the stepgen position for x-pos-fb.
+    #
+    net x-pos-fb         <= hm2_7i96.0.stepgen.00.position-fb  => pid.x.feedback    
+    net x-pos-encoder    <= hm2_7i96.0.encoder.00.position  => joint.0.motor-pos-fb
+    \endcode
+
+      \dot
+        digraph structs {
+            concentrate=true
+            rankdir="LR"
+            label="stepgen control using encoder"
+
+            subgraph cluster_encoder {
+                label="hm.0.encoder.00"
+                encoder [shape="box" label=<
+                    <TABLE CELLBORDER="0" BORDER="0">
+                       <TR><TD ALIGN="LEFT" port="o0">position</TD></TR>
+                        <TR><TD ALIGN="LEFT" port="o1">velocity</TD></TR>                  
+                        <TR><TD ALIGN="LEFT" port="o2">index-enable</TD></TR>
+                    </TABLE>
+                >]
+            }
+
+            subgraph cluster_joint{
+                label="joint.0"
+                node [shape=plaintext]
+                joint [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0" ALIGN="LEFT">
+                                    <TR><TD port="i0">motor-pos-fb</TD></TR>
+                                    <TR><TD ALIGN="LEFT" port="i1">index-enable</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0" ALIGN="RIGHT">
+                                    <TR><TD ALIGN="RIGHT" port="o0"> motor-pos-cmd </TD></TR> 
+                                    <TR><TD ALIGN="RIGHT" port="o1"> vel-cmd </TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR>                                             
+                    </TABLE>
+                >]
+            }
+
+            subgraph cluster_pid{
+                label="pid.x"
+                pid [shape="box" label=<
+                    <TABLE>
+                        <TR> 
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="i0">command</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="i1">command-deriv</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="i2">index-enable</TD></TR>
+                                </TABLE>
+                            </TD>
+                            <TD>
+                                <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="o0">output</TD></TR> 
+                                </TABLE>
+                            </TD>
+                        </TR> 
+                        
+                        <TR>
+                            <TD COLSPAN="2">
+                            <TABLE CELLBORDER="0" BORDER="0">
+                                <TR >
+                                    <TD port="f0">feedback</TD>
+                                    <TD port="f1">feedback-deriv</TD>
+                                </TR>
+                            </TABLE>
+                            </TD>
+                        </TR>                    
+                    </TABLE>
+                >]
+            }
+
+            subgraph cluster_stepgen{
+                label="hm.0.stepgen.00"
+                stepgen [shape="box" label=<
+                    <TABLE>
+                        <TR><TD>
+                            <TABLE CELLBORDER="0" BORDER="0">
+                                   <TR><TD ALIGN="LEFT" port="i0">velocity-cmd</TD></TR>
+                                   <TR><TD ALIGN="LEFT" port="i1">index-enable</TD></TR>
+                            </TABLE>
+                        </TD>
+                        <TD>
+                            <TABLE CELLBORDER="0" BORDER="0">
+                                    <TR><TD ALIGN="RIGHT" port="o0">position-fb</TD></TR> 
+                            </TABLE>
+                        </TD></TR>                    
+                    </TABLE>
+                >]
+            }
+
+            null00 [shape="point" style="invis"];
+            null01 [shape="point" color="black"];
+
+            encoder -> joint -> null00 -> pid -> stepgen [style="invis" weight=10.0];
+
+            joint:o0    -> pid:i0       [label="x-pos-cmd" fontsize = "12" fontcolor="black" color="black"];
+            joint:o1    -> null00       [label="x-vel-cmd" fontsize = "12" fontcolor="black" color="black"];
+            pid:o0      -> stepgen:i0   [label="x-output" fontsize = "12" fontcolor="black" color="black"];
+      
+            encoder:o0  -> joint:i0:w -> pid:f0 [label="x-pos-fb" fontsize = "12" fontcolor="red" color="red"];            
             encoder:o1  -> pid:f1:s   [label="x-vel-fb" fontsize = "12" fontcolor="red2" color="red2"];
+            encoder:02 -> joint:i1 -> pid:i2 [label="x-index-enable" fontsize = "12" fontcolor="black" color="black"];
+            pid:i2 -> stepgen:i1 [label="x-index-enable" fontsize = "12" fontcolor="red2" color="red2"];
         }
     \enddot
 */
