Joypad documentation needs to be added.

--- a/latheMesa/graphViz/mainPage.dox
+++ b/latheMesa/graphViz/mainPage.dox
@@ -10,6 +10,7 @@
                 
         \section toDo_section ToDo 
                 - Implement and Document probe/tool length
+                - Document joypad
                 
         \section ref_section References
                 - Mesa 7i96 Manual
